// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a div with class none if there are no saved challenges 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedChallenges
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedChallenges": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Saved Challenges"
                    id="UserProfile.savedChallenges.header"
                    values={Object {}}
          />
</h2>,
        <div
          className="none"
>
          No Challenges
</div>,
      ],
      "className": "saved-challenges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Saved Challenges",
            "id": "UserProfile.savedChallenges.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No Challenges",
          "className": "none",
        },
        "ref": null,
        "rendered": "No Challenges",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Saved Challenges"
                        id="UserProfile.savedChallenges.header"
                        values={Object {}}
            />
</h2>,
          <div
            className="none"
>
            No Challenges
</div>,
        ],
        "className": "saved-challenges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Saved Challenges",
              "id": "UserProfile.savedChallenges.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Challenges",
            "className": "none",
          },
          "ref": null,
          "rendered": "No Challenges",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a list of the saved challenges with links to each 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedChallenges
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedChallenges": Array [
              Object {
                "id": 321,
                "name": "First Challenge",
              },
              Object {
                "id": 654,
                "name": "Second Challenge",
              },
              Object {
                "id": 987,
                "name": "Third Challenge",
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Saved Challenges"
                    id="UserProfile.savedChallenges.header"
                    values={Object {}}
          />
</h2>,
        <ul>
          <li
                    className="columns saved-challenges__challenge"
          >
                    <div
                              className="column"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/321"
                              >
                                        First Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
          <li
                    className="columns saved-challenges__challenge"
          >
                    <div
                              className="column"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/654"
                              >
                                        Second Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
          <li
                    className="columns saved-challenges__challenge"
          >
                    <div
                              className="column"
                    >
                              <Link
                                        replace={false}
                                        to="/challenge/987"
                              >
                                        Third Challenge
                              </Link>
                    </div>
                    <div
                              className="column"
                    >
                              <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                              >
                                        <SvgSymbol
                                                  className="icon"
                                                  sym="trash-icon"
                                                  viewBox="0 0 20 20"
                                        />
                              </a>
                    </div>
          </li>
</ul>,
      ],
      "className": "saved-challenges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Saved Challenges",
            "id": "UserProfile.savedChallenges.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="columns saved-challenges__challenge"
>
              <div
                            className="column"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/321"
                            >
                                          First Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
            <li
              className="columns saved-challenges__challenge"
>
              <div
                            className="column"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/654"
                            >
                                          Second Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
            <li
              className="columns saved-challenges__challenge"
>
              <div
                            className="column"
              >
                            <Link
                                          replace={false}
                                          to="/challenge/987"
                            >
                                          Third Challenge
                            </Link>
              </div>
              <div
                            className="column"
              >
                            <a
                                          className="button is-clear"
                                          onClick={[Function]}
                                          title={undefined}
                            >
                                          <SvgSymbol
                                                        className="icon"
                                                        sym="trash-icon"
                                                        viewBox="0 0 20 20"
                                          />
                            </a>
              </div>
</li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "321",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column"
>
                  <Link
                                    replace={false}
                                    to="/challenge/321"
                  >
                                    First Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/321"
>
                    First Challenge
</Link>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "First Challenge",
                    "replace": false,
                    "to": "/challenge/321",
                  },
                  "ref": null,
                  "rendered": "First Challenge",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "654",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column"
>
                  <Link
                                    replace={false}
                                    to="/challenge/654"
                  >
                                    Second Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/654"
>
                    Second Challenge
</Link>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Second Challenge",
                    "replace": false,
                    "to": "/challenge/654",
                  },
                  "ref": null,
                  "rendered": "Second Challenge",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "987",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="column"
>
                  <Link
                                    replace={false}
                                    to="/challenge/987"
                  >
                                    Third Challenge
                  </Link>
</div>,
                <div
                  className="column"
>
                  <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                  >
                                    <SvgSymbol
                                                      className="icon"
                                                      sym="trash-icon"
                                                      viewBox="0 0 20 20"
                                    />
                  </a>
</div>,
              ],
              "className": "columns saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Link
                    replace={false}
                    to="/challenge/987"
>
                    Third Challenge
</Link>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Third Challenge",
                    "replace": false,
                    "to": "/challenge/987",
                  },
                  "ref": null,
                  "rendered": "Third Challenge",
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                  "className": "column",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "div",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Saved Challenges"
                        id="UserProfile.savedChallenges.header"
                        values={Object {}}
            />
</h2>,
          <ul>
            <li
                        className="columns saved-challenges__challenge"
            >
                        <div
                                    className="column"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/321"
                                    >
                                                First Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
            <li
                        className="columns saved-challenges__challenge"
            >
                        <div
                                    className="column"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/654"
                                    >
                                                Second Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
            <li
                        className="columns saved-challenges__challenge"
            >
                        <div
                                    className="column"
                        >
                                    <Link
                                                replace={false}
                                                to="/challenge/987"
                                    >
                                                Third Challenge
                                    </Link>
                        </div>
                        <div
                                    className="column"
                        >
                                    <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                    >
                                                <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                                />
                                    </a>
                        </div>
            </li>
</ul>,
        ],
        "className": "saved-challenges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Saved Challenges",
              "id": "UserProfile.savedChallenges.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="columns saved-challenges__challenge"
>
                <div
                                className="column"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/321"
                                >
                                                First Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
              <li
                className="columns saved-challenges__challenge"
>
                <div
                                className="column"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/654"
                                >
                                                Second Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
              <li
                className="columns saved-challenges__challenge"
>
                <div
                                className="column"
                >
                                <Link
                                                replace={false}
                                                to="/challenge/987"
                                >
                                                Third Challenge
                                </Link>
                </div>
                <div
                                className="column"
                >
                                <a
                                                className="button is-clear"
                                                onClick={[Function]}
                                                title={undefined}
                                >
                                                <SvgSymbol
                                                                className="icon"
                                                                sym="trash-icon"
                                                                viewBox="0 0 20 20"
                                                />
                                </a>
                </div>
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "321",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column"
>
                    <Link
                                        replace={false}
                                        to="/challenge/321"
                    >
                                        First Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/321"
>
                      First Challenge
</Link>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "First Challenge",
                      "replace": false,
                      "to": "/challenge/321",
                    },
                    "ref": null,
                    "rendered": "First Challenge",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "654",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column"
>
                    <Link
                                        replace={false}
                                        to="/challenge/654"
                    >
                                        Second Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/654"
>
                      Second Challenge
</Link>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Second Challenge",
                      "replace": false,
                      "to": "/challenge/654",
                    },
                    "ref": null,
                    "rendered": "Second Challenge",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "987",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="column"
>
                    <Link
                                        replace={false}
                                        to="/challenge/987"
                    >
                                        Third Challenge
                    </Link>
</div>,
                  <div
                    className="column"
>
                    <a
                                        className="button is-clear"
                                        onClick={[Function]}
                                        title={undefined}
                    >
                                        <SvgSymbol
                                                            className="icon"
                                                            sym="trash-icon"
                                                            viewBox="0 0 20 20"
                                        />
                    </a>
</div>,
                ],
                "className": "columns saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      replace={false}
                      to="/challenge/987"
>
                      Third Challenge
</Link>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Third Challenge",
                      "replace": false,
                      "to": "/challenge/987",
                    },
                    "ref": null,
                    "rendered": "Third Challenge",
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      className="button is-clear"
                      onClick={[Function]}
                      title={undefined}
>
                      <SvgSymbol
                                            className="icon"
                                            sym="trash-icon"
                                            viewBox="0 0 20 20"
                      />
</a>,
                    "className": "column",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <SvgSymbol
                        className="icon"
                        sym="trash-icon"
                        viewBox="0 0 20 20"
/>,
                      "className": "button is-clear",
                      "onClick": [Function],
                      "title": undefined,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "className": "icon",
                        "sym": "trash-icon",
                        "viewBox": "0 0 20 20",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "div",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
